Spacing fix for p tag

--- a/sites/all/themes/atwork_zen/sass/atwork_zen.styles.scss
+++ b/sites/all/themes/atwork_zen/sass/atwork_zen.styles.scss
@@ -1470,7 +1470,7 @@ article p.submitted {
 }
 article p {
   padding: 0;
-  margin: 10px 0 0 0;
+  margin: 10px 0;
 }
 article p,
 article ul,
